[gd_scene load_steps=5 format=3 uid="uid://craycgh0nflwi"]

[ext_resource type="Script" uid="uid://bk5qogjf67g5p" path="res://scripts/vehicle_prototype.gd" id="1_jle0k"]
[ext_resource type="PackedScene" uid="uid://c5mbxyrq38rl1" path="res://Components/interactable_component.tscn" id="1_xre2r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7e1cq"]

[sub_resource type="BoxMesh" id="BoxMesh_xre2r"]

[node name="VehiclePrototype" type="VehicleBody3D"]
script = ExtResource("1_jle0k")
engine_force_value = 400.0
max_steer_angle = 15.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_7e1cq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2.5135183, 0, 0, 0, 1, 0, 0, 0, 3.5054636, 0, 0, 0)
mesh = SubResource("BoxMesh_xre2r")

[node name="FrontLeftWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2485359, 0, 1.0113152)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.7

[node name="FrontRightWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2608294, 0, 0.97669923)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.7

[node name="BackLeftWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2608294, 0, -1.0033364)
use_as_traction = true
wheel_radius = 0.7

[node name="BackRightWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2608299, 0, -1.0033362)
use_as_traction = true
wheel_radius = 0.7

[node name="InteractableComponent" parent="." instance=ExtResource("1_xre2r")]
